--- a/Ambermoon.ConcatFiles/Ambermoon.ConcatFiles.csproj
+++ b/Ambermoon.ConcatFiles/Ambermoon.ConcatFiles.csproj
@@ -7,7 +7,7 @@
     <Copyright>Copyright (C) 2021 by Robert Schneckenhaus</Copyright>
     <Company>Robert Schneckenhaus</Company>
     <Authors>Robert Schneckenhaus</Authors>
-    <Configurations>Debug;Release;DebugAndroid</Configurations>
+    <Configurations>Debug;Release;DebugAndroid;DebugES;ReleaseES</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
