--- a/Ambermoon.Data.FileSystems/Ambermoon.Data.FileSystems.csproj
+++ b/Ambermoon.Data.FileSystems/Ambermoon.Data.FileSystems.csproj
@@ -12,7 +12,7 @@
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	<Version>10.8.0</Version>
 	<UserSecretsId>485e4790-32fd-45f1-b729-c5ca93ba0fad</UserSecretsId>
-	<Configurations>Debug;Release;DebugAndroid</Configurations>
+	<Configurations>Debug;Release;DebugAndroid;DebugES;ReleaseES</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
