--- a/Ambermoon.Data.Pyrdacor/Ambermoon.Data.Pyrdacor.csproj
+++ b/Ambermoon.Data.Pyrdacor/Ambermoon.Data.Pyrdacor.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-    <Configurations>Debug;Release;DebugAndroid</Configurations>
+    <Configurations>Debug;Release;DebugAndroid;DebugES;ReleaseES</Configurations>
     <Version>10.8.0</Version>
   </PropertyGroup>
 
