--- a/AmbermoonAdditionalDataLoader/AmbermoonAdditionalDataLoader.csproj
+++ b/AmbermoonAdditionalDataLoader/AmbermoonAdditionalDataLoader.csproj
@@ -5,6 +5,7 @@
 	  <Version>10.8.0</Version>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Configurations>Debug;Release;DebugES;ReleaseES</Configurations>
   </PropertyGroup>
 
 </Project>
