--- a/Ambermoon.Audio.OpenAL/Ambermoon.Audio.OpenAL.csproj
+++ b/Ambermoon.Audio.OpenAL/Ambermoon.Audio.OpenAL.csproj
@@ -10,7 +10,7 @@
     <RepositoryType>Github</RepositoryType>
     <PackageTags>Ambermoon OpenAL Audio Sound Music</PackageTags>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Configurations>Debug;Release;DebugAndroid</Configurations>
+    <Configurations>Debug;Release;DebugAndroid;DebugES;ReleaseES</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
