--- a/Ambermoon.Audio.OpenAL/Ambermoon.Audio.OpenAL.csproj
+++ b/Ambermoon.Audio.OpenAL/Ambermoon.Audio.OpenAL.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Version>10.8.0</Version>
     <Authors>Robert Schneckenhaus</Authors>
     <Description>OpenAL audio interface implementation for Ambermoon</Description>
