--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,19 @@ obj
 /Ambermoon.net/ambermoon.cfg
 /publish-win64
 /ambermoon.cfg
+/AmbermoonMusicPlayer
+/AmberSynth
+/AmberSynthTest
+/DataAnalyzer
+/FileExtractor
+/ImageDataReconstruct
+*.adf
+/SandboxCreator
+/Saves/german
+/SonicArranger
+/aex
+/WavePlayer
+/test.bat
+/testdebug.bat
+/Ambermoon.net/CreateIngameFont.txt
+/Ambermoon.net/GlyphExport.txt
