--- a/AmbermoonPatcher/AmbermoonPatcher.csproj
+++ b/AmbermoonPatcher/AmbermoonPatcher.csproj
@@ -7,8 +7,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<PublishTrimmed>true</PublishTrimmed>
-	<Version>1.8.5</Version>
+	<Version>1.8.6</Version>
 	<Configurations>Debug;Release;DebugES;ReleaseES</Configurations>
+	<ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
 </Project>
