Reworked game data repo project (still WIP)

--- a/Ambermoon.Core/Ambermoon.Core.csproj
+++ b/Ambermoon.Core/Ambermoon.Core.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <LangVersion>8</LangVersion>
     <RootNamespace>Ambermoon</RootNamespace>
     <UserSecretsId>5ff861f6-0255-427a-978a-7a8030ee8731</UserSecretsId>
@@ -12,6 +12,7 @@
     <Description>Core of the Ambermoon rework</Description>
     <DebugType>portable</DebugType>
     <Configurations>Debug;Release;DebugAndroid;DebugES;ReleaseES</Configurations>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugType>portable</DebugType>
