--- a/Ambermoon.Data.GameDataRepository/Ambermoon.Data.GameDataRepository.csproj
+++ b/Ambermoon.Data.GameDataRepository/Ambermoon.Data.GameDataRepository.csproj
@@ -6,6 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(OS)' == 'Windows_NT'">
+    <DefineConstants>OS_WINDOWS</DefineConstants>
+  </PropertyGroup>
+	
+  <ItemGroup Condition="'$(OS)' == 'Windows_NT'">
+	  <PackageReference Include="System.Drawing.Common" Version="8.0.1" />
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Ambermoon.Data.FileSystems\Ambermoon.Data.FileSystems.csproj" />
     <ProjectReference Include="..\Ambermoon.Data.Legacy\Ambermoon.Data.Legacy.csproj" />
