--- a/AmbermoonPatcher/AmbermoonPatcher.csproj
+++ b/AmbermoonPatcher/AmbermoonPatcher.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,9 +7,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<PublishTrimmed>true</PublishTrimmed>
-	<Version>1.9.6</Version>
+	<Version>1.9.7</Version>
 	<Configurations>Debug;Release;DebugES;ReleaseES</Configurations>
 	<ApplicationManifest>app.manifest</ApplicationManifest>
+	<PublishAot>true</PublishAot>
   </PropertyGroup>
 
 </Project>
