--- a/Ambermoon.Data.GameDataRepository/Ambermoon.Data.GameDataRepository.csproj
+++ b/Ambermoon.Data.GameDataRepository/Ambermoon.Data.GameDataRepository.csproj
@@ -1,9 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<Version>0.1.0</Version>
+	<Authors>Robert Schneckenhaus</Authors>
+	<Description>Library to load and modify Ambermoon game data repositories. Use this for new projects like editors.</Description>
+	<PackageProjectUrl>https://github.com/Pyrdacor/Ambermoon.net</PackageProjectUrl>
+	<RepositoryUrl>https://github.com/Pyrdacor/Ambermoon.net</RepositoryUrl>
+	<RepositoryType>Github</RepositoryType>
+	<PackageTags>Ambermoon Game Data</PackageTags>
+	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	<Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(OS)' == 'Windows_NT'">
