--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,6 +39,8 @@ artifacts:
     name: Ambermoon.net-Mac-ARM
   - path: Ambermoon.net-Mac.zip
     name: Ambermoon.net-Mac
+  - path: AmbermoonInstall.exe
+    name: AmbermoonInstaller
   - path: nuget\*.nupkg
     name: NugetPackages
 
@@ -104,6 +106,19 @@ deploy:
   - provider: GitHub
     name: Ambermoon.net-Mac-ARM
     artifact: Ambermoon.net-Mac-ARM
+    tag: $(APPVEYOR_REPO_TAG_NAME)
+    release: $(APPVEYOR_REPO_TAG_NAME)
+    description: 'Release $(APPVEYOR_REPO_TAG_NAME)'
+    auth_token:
+      secure: ku89dMTVkz+PE5bvxWQCLG9PbNTa9tQUsidZ/7726rLEZjIAvDcxEC668Ix9zYmw
+    draft: true
+    prerelease: true
+    force_update: true
+    on:
+      APPVEYOR_REPO_TAG: true
+  - provider: GitHub
+    name: AmbermoonInstaller
+    artifact: AmbermoonInstaller
     tag: $(APPVEYOR_REPO_TAG_NAME)
     release: $(APPVEYOR_REPO_TAG_NAME)
     description: 'Release $(APPVEYOR_REPO_TAG_NAME)'
