--- a/AmbermoonAndroid/AndroidManifest.xml
+++ b/AmbermoonAndroid/AndroidManifest.xml
@@ -2,5 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="com.pyrdacor.AmbermoonAndroid" android:versionCode="1" android:versionName="10.0">
 	<uses-feature android:glEsVersion="0x00030000" android:required="true" />
 	<uses-configuration android:reqTouchScreen="finger" />
+	<uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.BLUETOOTH" />
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+	<uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
+	<uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
 	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:supportsRtl="true"></application>
 </manifest>
