Improved touch input and music playback

--- a/AmbermoonAndroid/AmbermoonAndroid.csproj
+++ b/AmbermoonAndroid/AmbermoonAndroid.csproj
@@ -57,6 +57,7 @@
     <None Remove="Resources\versions.dat" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MP3Sharp" Version="1.0.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Silk.NET.Input" Version="2.20.0" />
     <PackageReference Include="Silk.NET.OpenGL" Version="2.20.0" />
