Added advanced image infos

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ obj
 /testdebug.bat
 /Ambermoon.net/CreateIngameFont.txt
 /Ambermoon.net/GlyphExport.txt
+/AmbermoonAndroid/ambermoon.keystore.pass.txt
+/AmbermoonAndroid/ambermoon.keystore
