Using Ubuntu 22.04 LTS (supports .NET 8)

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ obj
 /Ambermoon.net/GlyphExport.txt
 /AmbermoonAndroid/ambermoon.keystore.pass.txt
 /AmbermoonAndroid/ambermoon.keystore
+/AmbermoonAndroid/PublishAndroid.ps1
