--- a/AmbermoonAndroid/AmbermoonAndroid.csproj
+++ b/AmbermoonAndroid/AmbermoonAndroid.csproj
@@ -1,80 +1,42 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net7.0-android</TargetFramework>
-    <SupportedOSPlatformVersion>19.0</SupportedOSPlatformVersion>
+    <TargetFramework>net8.0-android</TargetFramework>
+    <SupportedOSPlatformVersion>21.0</SupportedOSPlatformVersion>
 	<RuntimeIdentifiers>android-arm;android-arm64;android-x86;android-x64</RuntimeIdentifiers>
     <OutputType>Exe</OutputType>
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationId>com.pyrdacor.AmbermoonAndroid</ApplicationId>
     <ApplicationVersion>1</ApplicationVersion>
-    <ApplicationDisplayVersion>10.0</ApplicationDisplayVersion>
-    <Configurations>Debug;Release;ReleaseAndroid;DebugAndroid;DebugES;ReleaseES</Configurations>
+    <ApplicationDisplayVersion>1.10.0</ApplicationDisplayVersion>
+    <Configurations>Debug;Release</Configurations>
     <GenerateResourceUsePreserializedResources>false</GenerateResourceUsePreserializedResources>
     <SignAssembly>False</SignAssembly>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>$(DefineConstants)</DefineConstants>
-    <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugAndroid|AnyCPU'">
-    <DefineConstants>$(DefineConstants);GLES</DefineConstants>
-    <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
-	<AndroidUseAapt2>True</AndroidUseAapt2>
-	<DebugSymbols>True</DebugSymbols>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugES|AnyCPU'">
     <DefineConstants>$(DefineConstants);GLES</DefineConstants>
     <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
     <AndroidUseAapt2>True</AndroidUseAapt2>
+    <AndroidCreatePackagePerAbi>False</AndroidCreatePackagePerAbi>
+    <AndroidPackageFormat>apk</AndroidPackageFormat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>$(DefineConstants);GLES</DefineConstants>
     <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
     <PublishTrimmed>True</PublishTrimmed>
 	<GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseAndroid|AnyCPU'">
-	<DefineConstants>$(DefineConstants);GLES</DefineConstants>
-    <AndroidLinkTool>r8</AndroidLinkTool>
-    <AndroidUseAapt2>True</AndroidUseAapt2>
-    <AndroidCreatePackagePerAbi>False</AndroidCreatePackagePerAbi>
-    <AndroidPackageFormat>aab</AndroidPackageFormat>
-    <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
-    <Optimize>True</Optimize>
-    <PublishTrimmed>False</PublishTrimmed>
-	<GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
-	<DebugType>none</DebugType>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseES|AnyCPU'">
-    <DefineConstants>$(DefineConstants);GLES</DefineConstants>
-    <AndroidLinkTool>r8</AndroidLinkTool>
-    <AndroidUseAapt2>True</AndroidUseAapt2>
-    <AndroidCreatePackagePerAbi>False</AndroidCreatePackagePerAbi>
-    <AndroidPackageFormat>aab</AndroidPackageFormat>
-    <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
-    <Optimize>True</Optimize>
+	<AndroidLinkTool>r8</AndroidLinkTool>
+	<AndroidPackageFormat>aab</AndroidPackageFormat>
   </PropertyGroup>
   <ItemGroup>
-    <None Remove="Resources\IntroFont.dat" />
-    <None Remove="Resources\logo.pyr" />
-    <None Remove="Resources\song.pyr" />
-    <None Remove="Resources\versions.dat" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="MP3Sharp" Version="1.0.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Silk.NET.Input" Version="2.20.0" />
-    <PackageReference Include="Silk.NET.OpenGL" Version="2.20.0" />
-    <PackageReference Include="Silk.NET.OpenGLES" Version="2.20.0" />
-    <PackageReference Include="Silk.NET.Windowing.Sdl" Version="2.20.0" />
-    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.13.0.1" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseAndroid|AnyCPU'">
-    <PackageReference Include="System.Resources.Extensions" Version="7.0.0" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <PackageReference Include="System.Resources.Extensions" Version="7.0.0" />
+    <PackageReference Include="Silk.NET.Input" Version="2.21.0" />
+    <PackageReference Include="Silk.NET.OpenGL" Version="2.21.0" />
+    <PackageReference Include="Silk.NET.OpenGLES" Version="2.21.0" />
+    <PackageReference Include="Silk.NET.Windowing.Sdl" Version="2.21.0" />
+    <PackageReference Include="SonicArranger" Version="1.0.12" />
+    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.13.1.4" />
+    <PackageReference Include="System.Resources.Extensions" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ambermoon.Audio.Android\Ambermoon.Audio.Android.csproj" />
