--- a/AmbermoonAndroid/AmbermoonAndroid.csproj
+++ b/AmbermoonAndroid/AmbermoonAndroid.csproj
@@ -18,7 +18,10 @@
     <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
     <AndroidUseAapt2>True</AndroidUseAapt2>
     <AndroidCreatePackagePerAbi>False</AndroidCreatePackagePerAbi>
-    <AndroidPackageFormat>apk</AndroidPackageFormat>
+    <AndroidPackageFormat>aab</AndroidPackageFormat>
+    <AndroidEnableMultiDex>False</AndroidEnableMultiDex>
+    <DebugType>embedded</DebugType>
+    <DebugSymbols>True</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>$(DefineConstants);GLES</DefineConstants>
@@ -27,10 +30,10 @@
     <PublishTrimmed>False</PublishTrimmed>
 	<GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
 	<AndroidLinkTool>none</AndroidLinkTool>
-	<AndroidPackageFormat>apk</AndroidPackageFormat>
+	<AndroidPackageFormat>aab</AndroidPackageFormat>
 	<DebugSymbols>True</DebugSymbols>
 	  <AndroidLinkMode>None</AndroidLinkMode>
-	  <DebugType>Portable</DebugType>
+	  <DebugType>embedded</DebugType>
 	  <AndroidEnableProguard>false</AndroidEnableProguard>
 	  <AndroidEnableR8>false</AndroidEnableR8>
 	  <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
@@ -40,20 +43,28 @@
 	  <Optimize>false</Optimize>
 	  <AndroidUseAapt2>True</AndroidUseAapt2>
 	  <AndroidCreatePackagePerAbi>False</AndroidCreatePackagePerAbi>
+	  <AndroidEnableMultiDex>False</AndroidEnableMultiDex>
   </PropertyGroup>
 	<PropertyGroup>
 		<AndroidEnableProguard>false</AndroidEnableProguard>
 		<AndroidEnableR8>false</AndroidEnableR8>
 	</PropertyGroup>
+	<ItemGroup>
+	  <None Remove="google-services.json" />
+	</ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Silk.NET.Input" Version="2.21.0" />
-    <PackageReference Include="Silk.NET.OpenGL" Version="2.21.0" />
-    <PackageReference Include="Silk.NET.OpenGLES" Version="2.21.0" />
-    <PackageReference Include="Silk.NET.Windowing.Sdl" Version="2.21.0" />
+    <PackageReference Include="Silk.NET.Input" Version="2.22.0" />
+    <PackageReference Include="Silk.NET.OpenGL" Version="2.22.0" />
+    <PackageReference Include="Silk.NET.OpenGLES" Version="2.22.0" />
+    <PackageReference Include="Silk.NET.Windowing.Sdl" Version="2.22.0" />
     <PackageReference Include="SonicArranger" Version="1.0.12" />
-    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.13.1.4" />
-    <PackageReference Include="System.Resources.Extensions" Version="8.0.0" />
+    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.15.0.1" />
+    <PackageReference Include="System.Resources.Extensions" Version="9.0.0" />
+    <PackageReference Include="Xamarin.Firebase.Analytics" Version="122.1.2.1" />
+    <PackageReference Include="Xamarin.Firebase.Crashlytics" Version="119.2.1.1" />
+    <PackageReference Include="Xamarin.GooglePlayServices.Base" Version="118.5.0.3" />
+    <PackageReference Include="Xamarin.GooglePlayServices.Tasks" Version="118.2.0.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ambermoon.Audio.Android\Ambermoon.Audio.Android.csproj" />
@@ -65,6 +76,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\raw\" />
+  </ItemGroup>
+  <ItemGroup>
+    <GoogleServicesJson Include="google-services.json" />
   </ItemGroup>
   <ItemGroup>
     <None Update="proguard-rules.pro">
