--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ obj
 /AmbermoonAndroid/ambermoon.keystore.pass.txt
 /AmbermoonAndroid/ambermoon.keystore
 /AmbermoonAndroid/PublishAndroid.ps1
+/AmbermoonAndroid/AmbermoonAndroid.csproj.user
