--- a/Ambermoon.Data.GameDataRepository/Ambermoon.Data.GameDataRepository.csproj
+++ b/Ambermoon.Data.GameDataRepository/Ambermoon.Data.GameDataRepository.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<TargetFrameworks>net7.0;net8.0-android</TargetFrameworks>
+	<TargetFrameworks>net7.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<Version>0.1.2</Version>
