--- a/Ambermoon.Data.Legacy/Ambermoon.Data.Legacy.csproj
+++ b/Ambermoon.Data.Legacy/Ambermoon.Data.Legacy.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<TargetFrameworks>net7.0;net8.0-android</TargetFrameworks>
+	<TargetFrameworks>net7.0</TargetFrameworks>
 	<Nullable>disable</Nullable>
     <Authors>Robert Schneckenhaus</Authors>
     <Description>Library to load and process legacy data from the Amiga game Ambermoon.</Description>
