--- a/Ambermoon.Data.Pyrdacor/Ambermoon.Data.Pyrdacor.csproj
+++ b/Ambermoon.Data.Pyrdacor/Ambermoon.Data.Pyrdacor.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
+	<LangVersion>12</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
