Added occupied hands/fingers logic

--- a/Ambermoon.Data.Pyrdacor/Ambermoon.Data.Pyrdacor.csproj
+++ b/Ambermoon.Data.Pyrdacor/Ambermoon.Data.Pyrdacor.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="PYC.Compression" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Ambermoon.Data.Legacy\Ambermoon.Data.Legacy.csproj" />
   </ItemGroup>
 
